--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WASM Game</title>
+    <title>Multi-Target C Project</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./style.css">
   </head>
